syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Protos/organization.proto";

option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcAnimalService {
  rpc GetAll(Empty) returns (AnimalArray);
  rpc Add(GrpcAnimal) returns (Empty);
  rpc Get(IdRequest) returns (GrpcAnimal);
  rpc Edit(GrpcAnimal) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}


message GrpcAnimal {
	 int32 Id = 1;
	 string Category = 2;
	 string Sex = 3;
	 string Breed = 4;
	 string Size = 5;
	 string Coat = 6;
	 string Color = 7;
	 string Ears = 8;
	 string Tail = 9;
	 int32 IdCapturedAct = 10;
	 string Mark = 12;
	 string IdentChip = 13;
}

message AnimalArray {
	repeated GrpcAnimal list = 1;
}