syntax = "proto3";

import "Protos/organization.proto";
option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcLocalityService {
  rpc GetAll(Empty) returns (LocalityArray);
  rpc Add(GrpcLocality) returns (Empty);
  rpc Get(IdRequest) returns (GrpcLocality);
  rpc Edit(GrpcLocality) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}

message GrpcLocality {
   int32 Id = 1;
   string Name = 2;

}

message LocalityArray {
	repeated GrpcLocality list = 1;
}
