syntax = "proto3";

option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcOrganizationService {
  rpc GetAll(Empty) returns (OrganizationArray);
  rpc Add(GrpcOrganization) returns (Empty);
  rpc Get(IdRequest) returns (GrpcOrganization);
  rpc Edit(GrpcOrganization) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}

message Empty {}

message IdRequest {
   int32 Id = 1;
}

message GrpcOrganization {
   int32 Id = 1;
   string OrgName = 2;
   string INN = 3;
   string KPP = 4;
   string OrgAddress = 5;
   string OrgType = 6;
   string OrgAttribute = 7;
}

message OrganizationArray {
	repeated GrpcOrganization list = 1;
}
